--- a/runtime/package.json
+++ b/runtime/package.json
@@ -11,6 +11,7 @@
   "license": "",
   "devDependencies": {
     "@types/node": "^20.11.7",
+    "prettier": "^3.2.4",
     "typescript": "^5.3.3"
   }
 }
