--- a/runtime/package.json
+++ b/runtime/package.json
@@ -11,7 +11,11 @@
   "license": "",
   "devDependencies": {
     "@types/node": "^20.11.7",
+    "html-inline-script-webpack-plugin": "^3.2.1",
+    "html-webpack-plugin": "^5.6.0",
     "prettier": "^3.2.4",
-    "typescript": "^5.3.3"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack-cli": "^5.1.4"
   }
 }
