--- a/runtime/package.json
+++ b/runtime/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p tsconfig.json --outDir build"
+    "build": "webpack --mode=development"
   },
   "author": "",
   "license": "",
