--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-    "name": "basic-web-main",
-    "version": "1.0.0",
-    "description": "",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack --mode=development",
-        "run1": "cd compiler && npm run compile",
-        "run2": "cd runtime && npm run build"
-    },
-    "author": "",
-    "license": "",
-    "devDependencies": {
-        "@types/node": "^20.11.7",
-        "html-inline-script-webpack-plugin": "^3.2.1",
-        "html-webpack-plugin": "^5.6.0",
-        "prettier": "^3.2.4",
-        "ts-loader": "^9.5.1",
-        "typescript": "^5.3.3",
-        "webpack-cli": "^5.1.4"
-    }
+  "name": "basic-web-main",
+  "version": "1.0.0",
+  "description": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=development",
+    "run1": "cd compiler && npm run compile -- ../frontend/about.basic",
+    "run2": "cd runtime && npm run build",
+    "run3": "npm run run1 && npm run run2",
+    "dev": "nodemon --watch frontend/about.basic --exec \"npm run run3\""
+  },
+  "author": "",
+  "license": "",
+  "devDependencies": {
+    "@types/node": "^20.11.7",
+    "html-inline-script-webpack-plugin": "^3.2.1",
+    "html-webpack-plugin": "^5.6.0",
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.4",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack-cli": "^5.1.4"
+  }
 }
